# solana_did

./: Anchor.toml  README.md  package.json
app/: .eslintrc.json  package.json  tsconfig.json
app/components/: Button.tsx  homepage.tsx
app/contexts/: SolanaWalletProvider.tsx
app/functions/: utils.ts
app/hooks/: useAsyncEffect.tsx
app/idl/: vc_test.json
app/pages/: _app.tsx  index.tsx
app/utils/: types.ts
programs/vc_test/: Cargo.toml
programs/vc_test/src/: error.rs  lib.rs
programs/vc_test/src/instructions/: create.rs  mod.rs  util.rs
programs/vc_test/src/util/: mod.rs
tests/: utils.ts  vc_test.ts
